fix(frontend) : clean codes have been put in for better readability

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -40,7 +40,6 @@
 
 .panel.map {
   grid-row: span 2;
-  /* height: 100%; */
   min-height: 520px;
 }
 
@@ -59,12 +58,6 @@ body {
   color: #e0e0e0;
 }
 
-/* .card {
-  
-  padding: 16px;
-  border-radius: 8px;
-  margin-bottom: 16px;
-} */
 
 .dashboard-grid {
   display: grid;
@@ -95,40 +88,16 @@ body {
   border-left: 4px solid #ef4444;
 }
 
-/* @keyframes blink {
-  50% { opacity: 0.4; }
-}
-
-.system-health .critical {
-  color: #ff4d4d;
-}
-
-.system-health .normal {
-  color: #2ecc71;
-} */
-
 
 .status .critical { color: #ff4d4d; }
 .status .normal { color: #2ecc71; }
 
 .alert-high {
-  color: #FFA500; /* orangish yellow */
-  border-left: 4px solid #f59e0b; /* border color for HIGH alerts */
+  color: #FFA500;
+  border-left: 4px solid #f59e0b; 
 }
 
 
-/* .map-content {
-  height: 100%;
-  min-height: 420px;
-}
-
-.chart-container {
-  height: 260px;
-}
-
-.panel.alerts .panel-content {
-  max-height: 480px;
-} */
 
 @keyframes criticalBlink {
   0%   { background-color: rgba(239, 68, 68, 0.15); }
@@ -143,7 +112,7 @@ body {
 .leaflet-container {
   height: 100%;
   width: 100%;
-  /* min-height: 500px; */
+  
   
 }
 
@@ -169,9 +138,9 @@ body {
 }
 
 .kpi-bar {
-  /* width: 100%; */
+
   height: 10px;
-   background: #1f2933;  /* #020617 */
+   background: #1f2933;
   border-radius: 6px;
   overflow: hidden;
   margin: 8px 0;
